* scala test intellij template with opens/export modules added * opens/exports added to sbt tests (we don't use fork in tests so we have to add it to the sbt jvm) * java.math open added